# temporal-animations

./: .gitignore  .gitmodules  README.md  animated-guide.html  index.html  pyproject.toml
common/: logger.py  utils.py
manim_renderer/: __init__.py  application.py  code.py  entity.py  event_processor.py  history.py  manim_shims.py  nexus.py  scene.py  server.py  style.py  worker.py  worker_scene.py  workflow_task.py
scenes/: CallActivity.py  ExecuteUpdate.py  ExecuteWorkflow.py  NexusRequest.py  Signal.py  SignalWithStart.py  StartUpdate.py  StartWorkflow.py  StartWorkflowAndExecuteUpdate.py
scenes/events/: CallActivity.jsonl  ExecuteUpdate.jsonl  ExecuteWorkflow.jsonl  NexusRequest.jsonl  Signal.jsonl  SignalWithStart.jsonl  StartUpdate.jsonl  StartWorkflow.jsonl  StartWorkflowAndExecuteUpdate.jsonl
scenes/worker/: README.md  bubble.py  constants.py  coroutines.py  explanation.py  history.py  input.py  lib.py  scheduler.py  state_machines.py  utils.py  worker_scene.py
scenes/worker/examples/: room_example.py  tree_example.py
schema/: schema.py
tempyral/: __init__.py  api.py  application.py  code.py  entity.py  event.py  nexus.py  request_response.py  server.py  simulation.py  worker.py
